# neural

./: .gitignore  CMakeLists.txt
cmake/: FindNeural.cmake  NeuralConfig.cmake.in
include/neural/: ActivationFunction.h  CostFunction.h  CrossEntropy.h  DataSet.h  GradientDescent.h  Layer.h  Loader.h  LogLikelihood.h  MnistLoader.h  Network.h  QuadraticCost.h  RectifiedLinear.h  SigmoidFunction.h  SoftmaxFunction.h  TanhFunction.h  Teacher.h
source/neural/: ActivationFunction.cpp  CostFunction.cpp  CrossEntropy.cpp  DataSet.cpp  GradientDescent.cpp  Layer.cpp  LogLikelihood.cpp  MnistLoader.cpp  Network.cpp  QuadraticCost.cpp  RectifiedLinear.cpp  SigmoidFunction.cpp  SoftmaxFunction.cpp  TanhFunction.cpp  Teacher.cpp
